[package]
name = "wolfssl"
version = "0.1.0"
edition = "2021"
authors = ["pete.m@expressvpn.com", "pang.t@expressvpn.com", "brendan.h@expressvpn.com"]
license = "GPL-2.0"
description = "High-level bindings for WolfSSL"
repository = "https://github.com/expressvpn/wolfssl-rs"
keywords = ["wolfssl", "vpn", "lightway", "post-quantum", "cryptography"]

[features]
default = []
debug = ["wolfssl-sys/debug"] # Note that application code must also call wolfssl::enable_debugging(true)

[dependencies]
lock_api = "0.4.11"
log = "0.4"
once_cell = { version = "1.19.0", default-features = false, features = ["critical-section"] }
thiserror-no-std = "2.0.2"
wolfssl-sys = { path = "../wolfssl-sys", features = ["cortexm0p"] }

[dev-dependencies]
async-trait = "0.1.73"
env_logger = "0.10.0"
test-case = "3.0"
tokio = { version = "1.31.0", features = ["rt", "net", "macros"] }
